# Nmap Changelog ($Id$); -*-text-*-

o Namespace the pipes used to communicate with subprocesses by PID, to
  avoid multiple instances of Ncat from interfering with each other.
  Patch by Andrey Olkhin.

o Nmap may now partially rearrange its target list for more efficient
  host groups. Previously, a single target with a different interface,
  or with an IP address the same as a that of a target already in the
  group, would cause the group to be broken off at whatever size it
  was. Now, we buffer a small number of such targets, and keep looking
  through the input for more targets to fill out the current group.
  [David Fifield]

o [NSE] Changed ip-geolocation-geoplugin to use the web service's new
  output format. Reported by Robin Wood.

o Limited the number of open sockets in ultra_scan to FD_SETSIZE. Very
  fast connect scans could write past the end of an fd_set and cause a
  variety of crashes:
    nmap: scan_engine.cc:978: bool ConnectScanInfo::clearSD(int): Assertion `numSDs > 0' failed.
    select failed in do_one_select_round(): Bad file descriptor (9)
  [David Fifield]

o Fixed a bug that prevented Nmap from finding any interfaces when one
  of them had the type ARP_HDR_APPLETALK; this was the case for
  AppleTalk interfaces. However, This support is not complete
  since AppleTalk interfaces use different size hardware addresses than Ethernet.
  Nmap IP level scans should work without any problem, please refer to
  the '--send-ip' switch and to the following thread:
  http://seclists.org/nmap-dev/2013/q1/214
  This bug was reported by Steven Gregory Johnson. [Daniel Miller]

o [Nping] Nping now skips localhost targets for privileged pings (with
  an error message) because those generally don't work.
  [David Fifield]

o [Ncat] Ncat now keeps running in connect mode after receiving EOF
  from the remote socket, unless --recv-only is in effect.
  [Tomas Hozza]

o Routes are now sorted to prefer those with a lower metric. Retrieval